############2015-11-16#####################
alter table flashsale_refund add column proof_pic longtext;
alter table flashsale_order add column `sign_time` datetime default null;

alter table supplychain_supply_supplier add column `level` int(11) NOT NULL default 50 ,add index SC_SP_SR_LEVEL_IDX (`level`);
alter table supplychain_supply_supplier add column `speciality` varchar(256) NOT NULL ;
alter table supplychain_supply_supplier add column `total_select_num` int(11) NOT NULL;
alter table supplychain_supply_supplier add column `total_sale_num` double precision NOT NULL;
alter table supplychain_supply_supplier add column `total_sale_amount` double precision NOT NULL;
alter table supplychain_supply_supplier add column `total_refund_num`  int(11) NOT NULL;
alter table supplychain_supply_supplier add column `total_refund_amount` double precision NOT NULL;
alter table supplychain_supply_supplier add column `avg_post_days`  double precision NOT NULL;
alter table supplychain_supply_supplier add column `last_select_time` datetime default null;
alter table supplychain_supply_supplier add column `last_schedule_time` datetime default null;
>>>>>>> 3c9446d9bd22367fac50ed2faa1c593ab425f3a7
############2015-11-07#####################
alter table flashsale_pay_product_refund_record add column contactor bigint(20) NOT NULL DEFAULT 0;
alter table flashsale_pay_product_refund_record add column pro_model bigint(20) NOT NULL DEFAULT 0;
CREATE INDEX `flashsale_pay_product_refund_record_2c61ea09` ON `flashsale_pay_product_refund_record` (`contactor`);
CREATE INDEX `flashsale_pay_product_refund_record_da20976f` ON `flashsale_pay_product_refund_record` (`pro_model`);
############2015-11-07#####################
alter table supplychain_supply_schedule_manage_detail add column design_take_over varchar(32) default "nottakeover" NOT NULL;
alter table supplychain_supply_schedule_manage_detail add column design_person varchar(32) null;
############2015-10-07#####################